# cpp2cxx

./: .clang-format  .gitignore  CMakeLists.txt  CondParser.cpp  Demacrofier.cpp  DepGraph.cpp  DepGraph.h  Doxyfile  LICENCE  Macro.cpp  Macro.h  MainFinalize.cpp  MainSuggest.cpp  Parser.cpp  Parser.h  README.md  ReplacementList.cpp  ReplacementList.h  RlParser.cpp  UseCaseState.cpp  UseCaseState.h
ClangInterface/: ASTConsumer.cpp  ASTConsumer.hpp  CMakeLists.txt  TrackMacro.cpp
apps/: CMakeLists.txt  MainFinalize.cpp  MainSuggest.cpp  main.cpp
general_utilities/: CMakeLists.txt
include/: slex_interface.hpp  slex_iterator.hpp  slex_token.hpp
include/clang_interface/: ASTConsumer.hpp  FunctionInfo.h  TrackMacro.hpp
include/cpp2cxx/: BuildScheme.h  CondParser.h  ConfigScheme.h  DemacBoostWaveIncludes.h  DemacroficationScheme.h  Demacrofier.h  DepAnalyzer.h  DepGraph.h  ExceptionHandler.h  FileManager.h  FileManagerScheme.h  Macro.h  MacroScopeClassifier.h  MacroStat.h  Overseer.h  Parser.h  ReplacementList.h  RlCategory.h  RlParser.h  Tuple3_t.h  UseCaseState.h  ValidatorMap.h
include/general_utilities/: SortFunctors.h  complex_utils.hpp  debug.h  file_type.hpp  formatting_utils.hpp  list_utils.hpp  map_utils.hpp  print_typename.hpp  set_utils.hpp  sizeof.hpp  string_utils.hpp  vector_utils.hpp
include/slex/: cpp_slex_lexer.hpp  lexer.hpp
src/: ASTConsumer.cpp  CMakeLists.txt  CondParser.cpp  ConfigScheme.cpp  Demacrofier.cpp  DepGraph.cpp  FileManager.cpp  HeaderDependencyBuild.cpp  Macro.cpp  MacroStat.cpp  Overseer.cpp  Parser.cpp  ReplacementList.cpp  RlCategory.cpp  RlParser.cpp  TrackMacro.cpp  UseCaseState.cpp  debug.cpp  instantiate_cpp_exprgrammar.cpp  instantiate_cpp_grammar.cpp  instantiate_cpp_literalgrs.cpp  instantiate_defined_grammar.cpp
tests/: CMakeLists.txt  Demacro_test.cpp  FileManager_test.cpp  Parser_test.cpp  main_test.cpp
tests/dm_dir/: macro_stat.yaml
